test/tests/errors/error-class-no-own.sm
// false
// false
// false
/**/
/**/

program {
    class T {
        own x: int = 1;
    }
}